2008-04-27 svu

	* libxklavier/xkl_config_item.h, libxklavier/xkl_config_registry.h,
	doc/reference: a bit of cleanup for gtkdoc
	* NEWS: preparing 3.6
	* libxklavier/xklavier_config_iso.c: C99 fix

2008-04-26 svu

	* libxklavier/xklavier_config_iso.c: another lost xpath, better
	handling of lowercase

2008-04-25 svu

	* libxklavier/xklavier_config_iso.c: lost xpath
	* tests/test_config.c: a bit of polish

2008-04-23 svu

	* libxklavier/xkl_config_registry.h, libxklavier/xklavier_config.c,
	libxklavier/xklavier_config_iso.c, libxklavier/xklavier_private.h,
	tests/test_config.c: finished ISO browsing functionality

2008-04-21 svu

	* configure.in, libxklavier/Makefile.am,
	libxklavier/xkl_config_registry.h, libxklavier/xklavier_config.c,
	libxklavier/xklavier_config_iso.c, libxklavier/xklavier_private.h,
	tests/test_config.c: adding country/language iteration functions,
	introducing dependency on iso-codes

2008-04-15 svu

	* libxklavier/xkl_config_item.h, libxklavier/xklavier_config.c,
	tests/test_config.c: processing the language lists

2008-04-14 svu

	* configure.in, libxklavier/xkl_config_item.h,
	libxklavier/xklavier_config.c, tests/test_config.c: processing the
	country lists

2008-03-10 svu

	* NEWS: preparing 3.5

2008-03-01 svu

	* libxklavier/xklavier_util.c, libxklavier/xklavier_toplevel.c:
	properly managing PointerRoot, another attempt to fix
	http://bugzilla.gnome.org/show_bug.cgi?id=516318

2008-02-28 svu

	* libxklavier/xklavier_util.c: fix by Jens for Xnest issue,
	http://bugzilla.gnome.org/show_bug.cgi?id=516318
	* Makefile.am, configure.in, xfree86.xml,
	libxklavier/xklavier_config.c, libxklavier/xklavier_config_xkb.c,
	libxklavier/xklavier_config_xmm.c, libxklavier/xklavier_private.h:
	getting rid of xfree86.xml, end of support for XFree 4.2, generalizing
	some registry loading code

2008-02-01 svu

	* tests/test_monitor.c: C99 fix, by Jens

2008-01-30 svu

	* NEWS: preparing 3.4

2007-10-06 svu
