@@ -3,7 +3,9 @@
 	* libxklavier/xkl_config_item.h, libxklavier/xkl_config_registry.h,
 	doc/reference: a bit of cleanup for gtkdoc
 	* NEWS: preparing 3.6
-	* libxklavier/xklavier_config_iso.c: C99 fix
+	* libxklavier/xklavier_config_iso.c, libxklavier/xklavier_config.c,
+	libxklavier/xklavier_config_xkb.c, libxklavier/xklavier_util.c,
+	libxklavier/xklavier_xmm.c: C99 fixes
 
 2008-04-26 svu
 
